2.0
* some changes needed for difx2fits 2.0.
* implement fits source ids
* bug fixes around the board

1.6
* Add support for spacecraft.  Much cleanup of code

1.5
* Add top level parameters to DifxInput that are used specifically for FITS

1.4
* DifxInputGetAntennaId()

1.3
* Load in flag file
* use calloc where appropriate
* support generalized DATA FORMAT

1.2
* Fixed array indexing issue

1.1
* Improved auto*, changed library name a little

1.0 
* Initial version